# airgenome

./: .gitignore  .prev_margin  .readme-rules.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  HEXA_BLOCKERS.md  README.md  cl  cl2  cl_mk1  consciousness_engine_status.json  genomes.events.jsonl  hexa.toml  idea.json  launcher_cap.hexa  menubar.hexa  menubar.js  menubar_tpl.js  plan.md  prime_directive.json  profiles.json  project.hexa  run.hexa  run.sh  sampler.hexa  settings.hexa  settings.js
.claude/: settings.json
.github/: CODEOWNERS
.playwright-mcp/: page-2026-04-06T16-23-24-851Z.yml  page-2026-04-06T16-25-55-002Z.yml  page-2026-04-06T16-28-10-575Z.yml  page-2026-04-06T16-29-31-016Z.yml  page-2026-04-06T16-29-54-169Z.yml  page-2026-04-06T16-32-22-991Z.yml  page-2026-04-06T16-32-30-197Z.yml  page-2026-04-06T16-34-07-240Z.yml  page-2026-04-07T06-44-18-090Z.yml  page-2026-04-07T06-44-28-189Z.yml  page-2026-04-07T12-20-51-767Z.yml
api/: genome_api.hexa
core/: core.hexa
docs/: gate-troubleshooting.md  gates.hexa  mac-ubuntu-resource-bridge.md  troubleshooting.json
examples/: consumer.rs
forge/: claude_genome.jsonl  crosscorr.report.md  dashboard.html  e2e_samples.jsonl  forecast.json  forecast.jsonl  genomes.index.jsonl  genomes.ring  labeled_anomaly.jsonl  pid_split.report.md  predictive_throttle_state.json  resource_ceiling.jsonl  task_results.jsonl  throttle_history.jsonl  vitals_ring.state
gate/: install
mk1/: README.md  auto_dispatch.hexa  resource_coordinator.hexa
modules/: ag3_guard.hexa  ag3_loop.hexa  ag3_menubar_feed.hexa  ag3_shipper.hexa  cl.hexa  (+42 more)
(+6068 files in other folders)
